--- a/extension/connector/activemq/delivery/promena-connector-activemq-delivery-jms/pom.xml
+++ b/extension/connector/activemq/delivery/promena-connector-activemq-delivery-jms/pom.xml
@@ -20,6 +20,10 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>promena-transformer-internal</artifactId>
+        </dependency>
+        <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-internal</artifactId>
         </dependency>
