--- a/sdk/promena-extension/promena-extension-parent/pom.xml
+++ b/sdk/promena-extension/promena-extension-parent/pom.xml
@@ -90,6 +90,11 @@
             </dependency>
             <dependency>
                 <groupId>pl.beone.promena.core</groupId>
+                <artifactId>promena-core-internal-serialization</artifactId>
+                <version>${promena-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.beone.promena.core</groupId>
                 <artifactId>promena-core-use-case</artifactId>
                 <version>${promena-core.version}</version>
             </dependency>
