--- a/base/promena-core/configuration/promena-core-configuration/pom.xml
+++ b/base/promena-core/configuration/promena-core-configuration/pom.xml
@@ -19,6 +19,10 @@
         </dependency>
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
+            <artifactId>promena-core-internal-serialization</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-external-akka</artifactId>
         </dependency>
         <dependency>
