--- a/base/promena-core/pom.xml
+++ b/base/promena-core/pom.xml
@@ -22,7 +22,8 @@
         <module>application-model/promena-core-application-model-akka</module>
         <module>contract/promena-core-contract</module>
         <module>contract/promena-core-contract-akka</module>
-        <module>promena-core-internal</module>
+        <module>internal/promena-core-internal</module>
+        <module>internal/promena-core-internal-serialization</module>
         <module>external/promena-core-external-akka</module>
         <module>external/promena-core-external-spring</module>
         <module>promena-core-use-case</module>
@@ -137,6 +138,11 @@
             <dependency>
                 <groupId>pl.beone.promena.core</groupId>
                 <artifactId>promena-core-internal</artifactId>
+                <version>${promena-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>pl.beone.promena.core</groupId>
+                <artifactId>promena-core-internal-serialization</artifactId>
                 <version>${promena-core.version}</version>
             </dependency>
             <dependency>
