--- a/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
+++ b/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
@@ -14,6 +14,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>promena-transformer-internal</artifactId>
+        </dependency>
+        <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-internal</artifactId>
         </dependency>
