--- a/lib/kryo-message-converter/pom.xml
+++ b/lib/kryo-message-converter/pom.xml
@@ -63,7 +63,7 @@
 
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
-            <artifactId>promena-core-internal</artifactId>
+            <artifactId>promena-core-internal-serialization</artifactId>
             <version>${promena-core.version}</version>
         </dependency>
 
