--- a/extension/connector/activemq/pom.xml
+++ b/extension/connector/activemq/pom.xml
@@ -22,6 +22,7 @@
         <module>promena-connector-activemq-contract</module>
         <module>promena-connector-activemq-internal</module>
         <module>delivery/promena-connector-activemq-delivery-jms</module>
+        <module>delivery/promena-connector-activemq-delivery-jms-message-converter</module>
         <module>promena-connector-activemq-configuration</module>
         <module>promena-connector-activemq-integration-test</module>
     </modules>
@@ -53,8 +54,6 @@
 
     <properties>
         <promena-connector-activemq.version>0.9.0-SNAPSHOT</promena-connector-activemq.version>
-
-        <kryo-message-converter.version>0.9.0-SNAPSHOT</kryo-message-converter.version>
 
         <commons-math3.version>3.6.1</commons-math3.version>
     </properties>
