--- a/extension/connector/activemq/promena-connector-activemq-configuration/pom.xml
+++ b/extension/connector/activemq/promena-connector-activemq-configuration/pom.xml
@@ -22,11 +22,10 @@
             <artifactId>promena-connector-activemq-delivery-jms</artifactId>
             <version>${promena-connector-activemq.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>pl.beone.lib</groupId>
-            <artifactId>kryo-message-converter</artifactId>
-            <version>${kryo-message-converter.version}</version>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-activemq-delivery-jms-message-converter</artifactId>
+            <version>${promena-connector-activemq.version}</version>
         </dependency>
 
         <dependency>
