[improved][promena-connector-http] Extracted constants to promena-connector-http-application-model module

--- a/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
+++ b/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
@@ -23,6 +23,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-http-application-model</artifactId>
+            <version>${promena-connector-http.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
