--- a/mm/alfresco-promena-client/pom.xml
+++ b/mm/alfresco-promena-client/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-client</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>[MM] alfresco-promena-client</name>
@@ -14,8 +14,8 @@
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <promena-core.version>0.9.0</promena-core.version>
-        <promena-transformer.version>0.9.0</promena-transformer.version>
+        <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
+        <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
 
         <reactor-core.version>3.2.10.RELEASE</reactor-core.version>
 
@@ -70,7 +70,7 @@
 
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
-            <artifactId>promena-core-internal</artifactId>
+            <artifactId>promena-core-internal-serialization</artifactId>
             <version>${promena-core.version}</version>
         </dependency>
         <dependency>
