--- a/base/promena-core/application-model/promena-core-application-model-akka/pom.xml
+++ b/base/promena-core/application-model/promena-core-application-model-akka/pom.xml
@@ -17,5 +17,10 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>promena-transformer-contract</artifactId>
+        </dependency>
     </dependencies>
 </project>
