--- a/base/promena-core/external/promena-core-external-akka/pom.xml
+++ b/base/promena-core/external/promena-core-external-akka/pom.xml
@@ -30,5 +30,11 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-cluster-metrics_2.12</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
