--- a/mm/alfresco-promena-http-client/pom.xml
+++ b/mm/alfresco-promena-http-client/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-http-client</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>[MM] alfresco-promena-http-client</name>
@@ -18,8 +18,8 @@
         <reactor-netty.version>0.8.9.RELEASE</reactor-netty.version>
         <reactor-extra.version>3.2.3.RELEASE</reactor-extra.version>
 
-        <alfresco-promena-client.version>0.9.0</alfresco-promena-client.version>
-        <kryo-message-converter.version>0.9.0</kryo-message-converter.version>
+        <alfresco-promena-client.version>0.9.0-SNAPSHOT</alfresco-promena-client.version>
+        <promena-connector-http.version>0.9.0-SNAPSHOT</promena-connector-http.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
@@ -80,6 +80,11 @@
             <groupId>pl.beone.promena.alfresco.module</groupId>
             <artifactId>alfresco-promena-client</artifactId>
             <version>${alfresco-promena-client.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-http-application-model</artifactId>
+            <version>${promena-connector-http.version}</version>
         </dependency>
 
         <dependency>
