--- a/lib/promena-docker-maven-plugin/pom.xml
+++ b/lib/promena-docker-maven-plugin/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>pl.beone.promena.maven.plugin</groupId>
     <artifactId>promena-docker-maven-plugin</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>[MAVEN][PLUGIN] promena-docker-maven-plugin</name>
