[improved][alfresco-promena-message-broker-client] Adapted to new model, refactor and improve some features

--- a/mm/alfresco-promena-message-broker-client/src/main/resources/alfresco/module/alfresco-promena-message-broker-client/alfresco-global.properties
+++ b/mm/alfresco-promena-message-broker-client/src/main/resources/alfresco/module/alfresco-promena-message-broker-client/alfresco-global.properties
@@ -1,7 +1,7 @@
 promena.client.message-broker.consumer.queue.request=Promena.request
 promena.client.message-broker.consumer.queue.response=Promena.response
 promena.client.message-broker.consumer.queue.response.error=Promena.response.error
-promena.client.message-broker.consumer.queue.response.error.selector=send_back_attempt < ${promena.client.transformation.error.retry.max-attempts}
+promena.client.message-broker.consumer.queue.response.error.selector=send_back_retry_enabled = TRUE AND send_back_attempt < send_back_retry_max_attempts
 
 promena.client.message-broker.spring.activemq.broker-url=${messaging.broker.url}
 promena.client.message-broker.spring.jms.pub-sub-domain=false
