--- a/mm/alfresco-promena-message-broker-client/pom.xml
+++ b/mm/alfresco-promena-message-broker-client/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>pl.beone.promena.alfresco.module</groupId>
     <artifactId>alfresco-promena-message-broker-client</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>[MM] alfresco-promena-message-broker-client</name>
@@ -15,8 +15,8 @@
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
-        <alfresco-promena-client.version>0.9.0</alfresco-promena-client.version>
-        <kryo-message-converter.version>0.9.0</kryo-message-converter.version>
+        <alfresco-promena-client.version>0.9.0-SNAPSHOT</alfresco-promena-client.version>
+        <alfresco-promena-connector-activemq.version>0.9.0-SNAPSHOT</alfresco-promena-connector-activemq.version>
 
         <!-- Alfresco Maven Plugin version to use -->
         <alfresco.sdk.version>4.0.0</alfresco.sdk.version>
@@ -74,20 +74,30 @@
         </dependency>
 
         <dependency>
-            <groupId>pl.beone.promena.alfresco.module</groupId>
-            <artifactId>alfresco-promena-client</artifactId>
-            <version>${alfresco-promena-client.version}</version>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-activemq-application-model</artifactId>
+            <version>${alfresco-promena-connector-activemq.version}</version>
         </dependency>
         <dependency>
-            <groupId>pl.beone.lib</groupId>
-            <artifactId>kryo-message-converter</artifactId>
-            <version>${kryo-message-converter.version}</version>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-activemq-internal</artifactId>
+            <version>${alfresco-promena-connector-activemq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.connector</groupId>
+            <artifactId>promena-connector-activemq-delivery-jms-message-converter</artifactId>
+            <version>${alfresco-promena-connector-activemq.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-jms</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>pl.beone.promena.alfresco.module</groupId>
+            <artifactId>alfresco-promena-client</artifactId>
+            <version>${alfresco-promena-client.version}</version>
         </dependency>
 
         <dependency>
