[removed][promena-core] Creating description in exception from TransformerId (restored original data class toString) [added][promena-core] Delaying interruption (based on timeout) to AkkaTransformationService (to give transformer a chance to interrupt processing before Akka do it)

--- a/base/promena-core/configuration/promena-core-configuration/pom.xml
+++ b/base/promena-core/configuration/promena-core-configuration/pom.xml
@@ -50,5 +50,9 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-slf4j_2.12</artifactId>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 </project>
