--- a/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-ts.properties
+++ b/base/promena-core/configuration/promena-core-configuration/src/main/resources/application-ts.properties
@@ -1,4 +1,5 @@
 core.serializer.actors=1
+core.transformation.interruption-timeout-delay=3s
 core.serializer.kryo.buffer-size=104857600
 
 communication.external.manager.back-pressure.enabled=true
