--- a/extension/communication/internal/memory/pom.xml
+++ b/extension/communication/internal/memory/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>mockk</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
