[removed][alfresco-promena-activemq-client] Unnecessary alfresco-global-test-*.properties test files. One common file

--- a/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
+++ b/mm/alfresco-promena-activemq-client/src/test/resources/alfresco-global-test.properties
@@ -2,8 +2,8 @@
 promena.client.serializer.kryo.buffer-size=104857600
 
 # memory/file
-promena.client.communication.external.id=memory
-promena.client.communication.external.file.location=
+promena.client.communication.external.id=file
+promena.client.communication.external.file.location=file:/tmp
 
 promena.client.transformation.error.retry.enabled=true
 promena.client.transformation.error.retry.max-attempts=1
