--- a/base/promena-core/pom.xml
+++ b/base/promena-core/pom.xml
@@ -57,6 +57,8 @@
     </pluginRepositories>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
         <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
     </properties>
