--- a/lib/promena-docker-maven-plugin/pom.xml
+++ b/lib/promena-docker-maven-plugin/pom.xml
@@ -42,6 +42,8 @@
     </prerequisites>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
