--- a/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
+++ b/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
@@ -1,6 +1,10 @@
 spring.activemq.broker-url=failover:(nio://localhost:61616)?timeout=3000&jms.useCompression=true
 spring.jms.pub-sub-domain=false
 
+spring.activemq.pool.max-connections=1
+spring.jms.listener.concurrency=1
+spring.jms.listener.max-concurrency=1
+
 promena.connector.activemq.consumer.queue.request=Promena.request
 promena.connector.activemq.consumer.queue.response=Promena.response
 promena.connector.activemq.consumer.queue.response.error=Promena.response.error
