[added][docker-test-runner] Support for additional files during image build (not only Dockerfile and Dockerfile-fragment) [improved][docker-test-runner] Everything is configurable now

--- a/lib/docker-test-runner/src/test/resources/base-docker-test.properties
+++ b/lib/docker-test-runner/src/test/resources/base-docker-test.properties
@@ -7,8 +7,10 @@ docker.test.maven.container.test.run-after=rm -Rf /test/target/surefire-reports
 docker.test.image.name=
 docker.test.image.custom.enabled=true
 docker.test.image.custom.name=${artifactId}:test
-docker.test.image.custom.dockerfile.path=${basedir}/src/docker/Dockerfile
-docker.test.image.custom.dockerfile-fragment.path=${basedir}/src/test/resources/Dockerfile-fragment
+docker.test.image.custom.docker.directory.path=${basedir}/src/docker
+docker.test.image.custom.docker.dockerfile.name=Dockerfile
+docker.test.image.custom.docker-module.directory.path=${basedir}/src/test/resources/docker
+docker.test.image.custom.docker-module.dockerfile-fragment.name=Dockerfile-fragment
 docker.test.image.custom.deleteOnExit=false
 
 docker.test.m2.mount.enabled=true
