--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/main/resources/docker/Dockerfile-fragment
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/src/main/resources/docker/Dockerfile-fragment
@@ -1,1 +1,1 @@
-RUN echo "I'm ${rootArtifactId} transformer! Install additional dependencies if this transformer requires them."
+RUN echo "I'm <${transformerName}, ${transformerSubName}> transformer! Install additional dependencies if this transformer requires them."
