--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/pom.xml
@@ -9,6 +9,7 @@
     <version>${version}</version>
 
     <modules>
+        <module>${rootArtifactId}-application-model</module>
         <module>${rootArtifactId}</module>
         <module>${rootArtifactId}-configuration</module>
     </modules>
