--- a/base/promena-core/contract/promena-core-contract/pom.xml
+++ b/base/promena-core/contract/promena-core-contract/pom.xml
@@ -16,10 +16,7 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-application-model</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
-            <artifactId>promena-transformer-contract</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
     </dependencies>
 </project>
