--- a/base/promena-core/application-model/promena-core-application-model-akka/pom.xml
+++ b/base/promena-core/application-model/promena-core-application-model-akka/pom.xml
@@ -14,13 +14,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.12</artifactId>
+            <groupId>pl.beone.promena.transformer</groupId>
+            <artifactId>promena-transformer-contract</artifactId>
+            <version>${promena-transformer.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>pl.beone.promena.transformer</groupId>
-            <artifactId>promena-transformer-contract</artifactId>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-actor_2.12</artifactId>
         </dependency>
     </dependencies>
 </project>
