--- a/base/promena-core/application-model/promena-core-application-model/pom.xml
+++ b/base/promena-core/application-model/promena-core-application-model/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-contract</artifactId>
+            <version>${promena-transformer.version}</version>
         </dependency>
     </dependencies>
 </project>
