--- a/base/promena-core/external/promena-core-external-akka/pom.xml
+++ b/base/promena-core/external/promena-core-external-akka/pom.xml
@@ -16,14 +16,17 @@
         <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-internal</artifactId>
+            <version>${promena-transformer.version}</version>
         </dependency>
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-contract</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-contract-akka</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
 
         <dependency>
