--- a/base/promena-core/internal/promena-core-internal-serialization/pom.xml
+++ b/base/promena-core/internal/promena-core-internal-serialization/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-contract</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
 
         <dependency>
@@ -30,6 +31,7 @@
         <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-internal</artifactId>
+            <version>${promena-transformer.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
