--- a/base/promena-core/internal/promena-core-internal/pom.xml
+++ b/base/promena-core/internal/promena-core-internal/pom.xml
@@ -16,6 +16,7 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-contract</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
     </dependencies>
 </project>
