--- a/base/promena-core/promena-core-integration-test/pom.xml
+++ b/base/promena-core/promena-core-integration-test/pom.xml
@@ -15,6 +15,7 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-configuration</artifactId>
+            <version>${promena-core.version}</version>
             <scope>test</scope>
         </dependency>
 
