--- a/base/promena-core/promena-core-use-case/pom.xml
+++ b/base/promena-core/promena-core-use-case/pom.xml
@@ -15,11 +15,13 @@
         <dependency>
             <groupId>pl.beone.promena.core</groupId>
             <artifactId>promena-core-contract</artifactId>
+            <version>${promena-core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>pl.beone.promena.transformer</groupId>
             <artifactId>promena-transformer-internal</artifactId>
+            <version>${promena-transformer.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
