--- a/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
+++ b/extension/connector/http/delivery/promena-connector-http-delivery-http/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
 
         <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
