[improved][promena-actor-creator-adaptive-load-balancing] Replaced Slf4j by Kotlin-logging

--- a/extension/actor-creator/adaptive-load-balancing/pom.xml
+++ b/extension/actor-creator/adaptive-load-balancing/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
