--- a/mm/alfresco-promena-activemq-client/pom.xml
+++ b/mm/alfresco-promena-activemq-client/pom.xml
@@ -14,6 +14,8 @@
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
+        <kotlin-logging.version>1.7.2</kotlin-logging.version>
+
         <alfresco-promena-client.version>0.9.0-SNAPSHOT</alfresco-promena-client.version>
         <alfresco-promena-connector-activemq.version>0.9.0-SNAPSHOT</alfresco-promena-connector-activemq.version>
 
@@ -97,6 +99,12 @@
             <groupId>pl.beone.promena.alfresco.module</groupId>
             <artifactId>alfresco-promena-client</artifactId>
             <version>${alfresco-promena-client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+            <version>${kotlin-logging.version}</version>
         </dependency>
 
         <dependency>
