--- a/mm/alfresco-promena-client/pom.xml
+++ b/mm/alfresco-promena-client/pom.xml
@@ -17,6 +17,7 @@
         <promena-core.version>0.9.0-SNAPSHOT</promena-core.version>
         <promena-transformer.version>0.9.0-SNAPSHOT</promena-transformer.version>
 
+        <kotlin-logging.version>1.7.2</kotlin-logging.version>
         <reactor-core.version>3.2.10.RELEASE</reactor-core.version>
 
         <!-- Alfresco Maven Plugin version to use -->
@@ -85,6 +86,11 @@
             </exclusions>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+            <version>${kotlin-logging.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.projectreactor</groupId>
             <artifactId>reactor-core</artifactId>
