--- a/mm/alfresco-promena-http-client/pom.xml
+++ b/mm/alfresco-promena-http-client/pom.xml
@@ -15,6 +15,7 @@
         <kotlin.version>1.3.40</kotlin.version>
         <java.version>11</java.version>
 
+        <kotlin-logging.version>1.7.2</kotlin-logging.version>
         <reactor-netty.version>0.8.9.RELEASE</reactor-netty.version>
         <reactor-extra.version>3.2.3.RELEASE</reactor-extra.version>
 
@@ -87,6 +88,11 @@
             <version>${promena-connector-http.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.microutils</groupId>
+            <artifactId>kotlin-logging</artifactId>
+            <version>${kotlin-logging.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.projectreactor.netty</groupId>
             <artifactId>reactor-netty</artifactId>
