[improved][promena-connector-activemq] Quality of logger messages at the startup [improved][promena-connector-activemq] Disabled caching (messages and session)

--- a/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
+++ b/extension/connector/activemq/promena-connector-activemq-configuration/src/main/resources/module-connector-activemq.properties
@@ -1,7 +1,10 @@
 spring.activemq.broker-url=failover:(nio://localhost:61616)?timeout=3000&jms.useCompression=true
 spring.jms.pub-sub-domain=false
 
-spring.activemq.pool.max-connections=1
+spring.jms.cache.enabled=false
+spring.jms.cache.producers=false
+spring.activemq.pool.enabled=false
+
 spring.jms.listener.concurrency=1
 spring.jms.listener.max-concurrency=1
 
