[added][alfresco-promena-activemq-client] Logging at startup [updated][alfresco-promena-activemq-client] Alfresco-promena-client amp dependency [removed][alfresco-promena-activemq-client] Unnecessary properties from JmsProperties [improved][alfresco-promena-activemq-client] Changed connector factory to ActiveMQConnectionFactory [improved][alfresco-modules] Auto test running

--- a/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
+++ b/mm/alfresco-promena-activemq-client/src/main/resources/alfresco/module/alfresco-promena-activemq-client/alfresco-global.properties
@@ -1,7 +1,10 @@
+promena.client.activemq.spring.activemq.broker-url=${messaging.broker.url}
+promena.client.activemq.spring.jms.pub-sub-domain=false
+
+promena.client.activemq.spring.jms.listener.concurrency=1
+promena.client.activemq.spring.jms.listener.max-concurrency=1
+
 promena.client.activemq.consumer.queue.request=Promena.request
 promena.client.activemq.consumer.queue.response=Promena.response
 promena.client.activemq.consumer.queue.response.error=Promena.response.error
 promena.client.activemq.consumer.queue.response.error.selector=send_back_retry_enabled = TRUE AND send_back_attempt < send_back_retry_max_attempts
-
-promena.client.activemq.spring.activemq.broker-url=${messaging.broker.url}
-promena.client.activemq.spring.jms.pub-sub-domain=false
