--- a/mm/alfresco-promena-activemq-client/pom.xml
+++ b/mm/alfresco-promena-activemq-client/pom.xml
@@ -41,8 +41,9 @@
 
         <mockk.version>1.9.3</mockk.version>
         <spring.version>5.1.3.RELEASE</spring.version>
+        <junit-jupiter.version>5.5.1</junit-jupiter.version>
+        <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
         <testcontainers.version>1.11.2</testcontainers.version>
-        <kotlintest-runner-junit4.version>3.3.3</kotlintest-runner-junit4.version>
         <logback-classic.version>1.2.3</logback-classic.version>
 
         <!-- Environment configuration properties -->
@@ -108,8 +109,15 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>${kotlintest-runner-junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -127,12 +135,6 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.kotlintest</groupId>
-            <artifactId>kotlintest-runner-junit4</artifactId>
-            <version>${kotlintest-runner-junit4.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
