--- a/mm/alfresco-promena-http-client/pom.xml
+++ b/mm/alfresco-promena-http-client/pom.xml
@@ -44,8 +44,9 @@
 
         <mockk.version>1.9.3</mockk.version>
         <spring.version>5.1.3.RELEASE</spring.version>
+        <junit-jupiter.version>5.5.1</junit-jupiter.version>
+        <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
         <testcontainers.version>1.11.2</testcontainers.version>
-        <kotlintest-runner-junit4.version>3.3.3</kotlintest-runner-junit4.version>
         <logback-classic.version>1.2.3</logback-classic.version>
 
         <!-- Environment configuration properties -->
@@ -105,8 +106,21 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.kotlintest</groupId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
+            <version>${kotlintest-runner-junit5.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -124,12 +138,6 @@
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
             <version>${testcontainers.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.kotlintest</groupId>
-            <artifactId>kotlintest-runner-junit4</artifactId>
-            <version>${kotlintest-runner-junit4.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
