--- a/sdk/promena/promena-parent/pom.xml
+++ b/sdk/promena/promena-parent/pom.xml
@@ -56,7 +56,8 @@
         <akka-kryo-serialization.version>0.5.2</akka-kryo-serialization.version>
         <kryo-serializers.version>0.45</kryo-serializers.version>
 
-        <kotlintest-runner-junit4.version>3.3.3</kotlintest-runner-junit4.version>
+        <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
+        <junit-jupiter.version>5.5.1</junit-jupiter.version>
         <mockk.version>1.9.3</mockk.version>
     </properties>
 
@@ -109,9 +110,14 @@
             </dependency>
 
             <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>${junit-jupiter.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>io.kotlintest</groupId>
-                <artifactId>kotlintest-runner-junit4</artifactId>
-                <version>${kotlintest-runner-junit4.version}</version>
+                <artifactId>kotlintest-runner-junit5</artifactId>
+                <version>${kotlintest-runner-junit5.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.mockk</groupId>
