--- a/lib/docker-extension-test/pom.xml
+++ b/lib/docker-extension-test/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.beone.lib</groupId>
     <artifactId>docker-extension-test</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
 
     <name>[LIB] docker-extension-test</name>
 
