--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -41,13 +41,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.kotlintest</groupId>
-            <artifactId>kotlintest-runner-junit4</artifactId>
+            <artifactId>kotlintest-runner-junit5</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>pl.beone.lib</groupId>
-            <artifactId>docker-test-runner</artifactId>
+            <artifactId>docker-extension-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -97,6 +97,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
