--- a/sdk/promena-transformer/promena-transformer-parent/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-parent/pom.xml
@@ -53,7 +53,7 @@
         <kotlintest-runner-junit5.version>3.4.0</kotlintest-runner-junit5.version>
         <junit-jupiter.version>5.5.1</junit-jupiter.version>
         <mockk.version>1.9.3</mockk.version>
-        <docker-test-runner.version>0.9.0</docker-test-runner.version>
+        <docker-extension-test.version>0.9.0-SNAPSHOT</docker-extension-test.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
@@ -130,8 +130,8 @@
             </dependency>
             <dependency>
                 <groupId>pl.beone.lib</groupId>
-                <artifactId>docker-test-runner</artifactId>
-                <version>${docker-test-runner.version}</version>
+                <artifactId>docker-extension-test</artifactId>
+                <version>${docker-extension-test.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
