[improved][promena-executable-archetype] Comments quality

--- a/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
@@ -128,8 +128,9 @@
 <!--            <version>${promena.cluster.management.kubernetes.version}</version>-->
 <!--        </dependency>-->
 
-        <!-- TRANSFORMER -->
+        <!-- Put TRANSFORMERS configuration dependencies here -->
 
+        <!-- /Put -->
     </dependencies>
 
     <build>
@@ -206,8 +207,9 @@
                 </configuration>
 
                 <dependencies>
-                    <!-- TRANSFORMER -->
+                    <!-- Put TRANSFORMERS dependencies here -->
 
+                    <!-- /Put -->
                 </dependencies>
 
                 <executions>
