[added][promena-transformer-archetype] DSL for general transformation

--- a/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/sdk/promena-transformer/promena-transformer-archetype/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -57,7 +57,7 @@
         </dependency>
         <dependency>
             <groupId>pl.beone.lib</groupId>
-            <artifactId>docker-extension-test</artifactId>
+            <artifactId>docker-extension-junit5</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
