[updated][promena-executable-archetype] Dependencies

--- a/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/sdk/promena-executable/promena-executable-archetype/src/main/resources/archetype-resources/pom.xml
@@ -44,23 +44,23 @@
     <properties>
         <java.version>11</java.version>
 
-        <promena.core.version>0.9.0</promena.core.version>
+        <promena.core.version>0.9.0-SNAPSHOT</promena.core.version>
 
-        <promena.actor-creator.adaptive-load-balancing.version>0.9.0</promena.actor-creator.adaptive-load-balancing.version>
+        <promena.actor-creator.adaptive-load-balancing.version>0.9.0-SNAPSHOT</promena.actor-creator.adaptive-load-balancing.version>
 
-        <promena.communication.external.memory.version>0.9.0</promena.communication.external.memory.version>
-        <promena.communication.external.file.version>0.9.0</promena.communication.external.file.version>
-        <promena.communication.internal.memory.version>0.9.0</promena.communication.internal.memory.version>
-        <promena.communication.internal.file.version>0.9.0</promena.communication.internal.file.version>
+        <promena.communication.memory.external.version>0.9.0-SNAPSHOT</promena.communication.memory.external.version>
+        <promena.communication.file.external.version>0.9.0-SNAPSHOT</promena.communication.file.external.version>
+        <promena.communication.memory.internal.version>0.9.0-SNAPSHOT</promena.communication.memory.internal.version>
+        <promena.communication.file.internal.version>0.9.0-SNAPSHOT</promena.communication.file.internal.version>
 
-        <promena.connector.http.version>0.9.0</promena.connector.http.version>
-        <promena.connector.activemq.version>0.9.0</promena.connector.activemq.version>
+        <promena.connector.http.version>0.9.0-SNAPSHOT</promena.connector.http.version>
+        <promena.connector.activemq.version>0.9.0-SNAPSHOT</promena.connector.activemq.version>
 
-        <promena.cluster.management.kubernetes.version>0.9.0</promena.cluster.management.kubernetes.version>
+        <promena.cluster.management.kubernetes.version>0.9.0-SNAPSHOT</promena.cluster.management.kubernetes.version>
 
         <spring-boot.version>2.1.7.RELEASE</spring-boot.version>
 
-        <promena-docker-maven-plugin.version>0.9.0</promena-docker-maven-plugin.version>
+        <promena-docker-maven-plugin.version>0.9.0-SNAPSHOT</promena-docker-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
     </properties>
@@ -87,26 +87,26 @@
 
         <!-- Communication - external -->
         <dependency>
-            <groupId>pl.beone.promena.communication.external</groupId>
-            <artifactId>promena-communication-external-memory-configuration</artifactId>
-            <version>${promena.communication.external.memory.version}</version>
+            <groupId>pl.beone.promena.communication.memory</groupId>
+            <artifactId>promena-communication-memory-external-configuration</artifactId>
+            <version>${promena.communication.memory.external.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>pl.beone.promena.communication.external</groupId>-->
-<!--            <artifactId>promena-communication-external-file-configuration</artifactId>-->
-<!--            <version>${promena.communication.external.file.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>pl.beone.promena.communication.file</groupId>
+            <artifactId>promena-communication-file-external-configuration</artifactId>
+            <version>${promena.communication.file.external.version}</version>
+        </dependency>
 
         <!-- Communication - internal -->
         <dependency>
-            <groupId>pl.beone.promena.communication.internal</groupId>
-            <artifactId>promena-communication-internal-memory-configuration</artifactId>
-            <version>${promena.communication.internal.memory.version}</version>
+            <groupId>pl.beone.promena.communication.memory</groupId>
+            <artifactId>promena-communication-memory-internal-configuration</artifactId>
+            <version>${promena.communication.memory.internal.version}</version>
         </dependency>
 <!--        <dependency>-->
-<!--            <groupId>pl.beone.promena.communication.internal</groupId>-->
-<!--            <artifactId>promena-communication-internal-file-configuration</artifactId>-->
-<!--            <version>${promena.communication.internal.file.version}</version>-->
+<!--            <groupId>pl.beone.promena.communication.file</groupId>-->
+<!--            <artifactId>promena-communication-file-internal-configuration</artifactId>-->
+<!--            <version>${promena.communication.file.internal.version}</version>-->
 <!--        </dependency>-->
 
         <!-- Connector -->
