--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-AlfrescoScratch*.java
+test/
 
 # Created by https://www.gitignore.io/api/eclipse,intellij,kotlin,java
 # Edit at https://www.gitignore.io/?templates=eclipse,intellij,kotlin,java
