[fixed] Gitignore only root folders

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-test/
-docker/
-script/
+/test
+/docker
+/script
 
 # Created by https://www.gitignore.io/api/eclipse,intellij,kotlin,java
 # Edit at https://www.gitignore.io/?templates=eclipse,intellij,kotlin,java
